changelog_02-10-03 : Complete admin config entities PATCH0.1

--- a/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
@@ -19,7 +19,7 @@
             </a>
             <ul class="sub-menu">
                 <li class="nav-item">
-                    <a asp-page="/Shop/ProductCategories/Index" class="nav-link ">
+                    <a asp-page="/" class="nav-link ">
                         <span class="title">ثبت کتاب</span>
                     </a>
                 </li>
