--- a/FarhangbookStore/Views/Home/Index.cshtml
+++ b/FarhangbookStore/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="text-center">
+        <h2 class="display-4">(کتابفروشی فرهنگ - فروشگاه اینترنتی (نسخه آزمایشی</h2>
+        <p> کاربرگرامی : سیستم در حال حاظر در دست توسعه و طراحی می باشد - <a href="http://webnext.ir" target="_blank"> اطلاعات بیشتر </a>.</p>
+        <a href="Administrator" class="btn" style="margin-bottom:10px; background-color:#D1ECF1; color:black; border-radius:5px;" target="_blank">ورود به پنل مدیریت</a>
+    </div>
+    <p>Learn about <a href="#">Building Web apps with ASP.NET Core 7.0</a>.</p>
 </div>
