--- a/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_TopBarShamsiDate/Admin_TopBarShamsiDate.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_TopBarShamsiDate/Admin_TopBarShamsiDate.cshtml
@@ -1,4 +1,4 @@
-﻿@inject FarhangbookStore.Common.PublicExtentions.ConvertDate convertDate
+﻿@inject FarhangbookStore.PublicExtentions.ConvertDate convertDate
 <p class="dropdown-toggle" data-close-others="true">
     <i class="icon-calendar"></i>
     <span style="color: #737A99; font-weight: 300"> امروز ، @convertDate.ConvertMiladiToShamsi(DateTime.Now, "dddd d MMMM yyyy") </span>
