changelog_02-10-05 : Complete admin config entities PATCH0.5

--- a/FarhangbookStore/Areas/Administrator/Views/Category/AddCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/AddCategory.cshtml
@@ -16,53 +16,9 @@
 <div class="m-heading-1 border-yellow-crusta m-bordered">
     <h4 class="bold">راهنما</h4>
     <p>
-        کاربرگرامی: شما در این بخش می توانید علاوه بر ثبت اطلاعات کتاب جدید، عملیات <span class="bold">فیلترکردن، ویرایش و غیرفعالسازی</span> اطلاعات کتاب را انجام دهید.
+        کاربرگرامی: شما در این بخش می توانید علاوه بر ثبت اطلاعات کتاب جدید، جهت مدیرت دسته بندی های ثبت شده بر روی دکمه <span class="bold">مدیریت دسته بندی ها</span> کلیک نمایید.
     </p>
 </div>
-<!-- BEGIN CONTAINER -->
-<div class="portlet light portlet-fit portlet-datatable bordered">
-    <div class="portlet-title">
-        <div class="caption">
-            <i class=" icon-layers font-green"></i>
-            <span class="caption-subject font-green-sharp bold uppercase">جستجوی اطلاعات</span>
-        </div>
-    </div>
-    <div class="portlet-body">
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="input-group">
-                    <input type="text" class="form-control form-control-solid" placeholder="جستجوی کلی اطلاعات کتاب بر اساس نام...">
-                    <span class="input-group-btn">
-                        <button type="submit" class="btn btn-primary">بررسی اطلاعات</button>
-                    </span>
-                </div>
-            </div>
-            <div class="col-md-2 col-sm-12">
-                <!-- BEGIN DRAGGABLE EVENTS PORTLET-->
-                <div class="input-icon right">
-                    <i class="fa fa-calendar"></i>
-                    <input class="form-control" id="NewsDate" name="NewsDate"
-                           placeholder="از تاریخ"
-                           data-MdDateTimePicker="true" data-trigger="click" data-targetselector="#NewsDate" data-groupid="group1"
-                           data-formdate="true" data-enabletimepicker="false" data-placement="bottom" />
-                </div>
-                <!-- END DRAGGABLE EVENTS PORTLET-->
-            </div>
-            <div class="col-md-2 col-sm-12">
-                <!-- BEGIN DRAGGABLE EVENTS PORTLET-->
-                <div class="input-icon right">
-                    <i class="fa fa-calendar"></i>
-                    <input class="form-control" id="NewsDate" name="NewsDate"
-                           placeholder="تا تاریخ"
-                           data-MdDateTimePicker="true" data-trigger="click" data-targetselector="#NewsDate" data-groupid="group1"
-                           data-formdate="true" data-enabletimepicker="false" data-placement="bottom" />
-                </div>
-                <!-- END DRAGGABLE EVENTS PORTLET-->
-            </div>
-        </div>
-    </div>
-</div>
-<!-- END CONTAINER -->
 <!-- BEGIN CONTAINER -->
 <div class="portlet light portlet-fit portlet-datatable bordered">
     <div class="portlet-title">
@@ -72,6 +28,7 @@
         </div>
         <div class="actions">
             <a href="#" role="button" class="btn btn-outline red-thunderbird" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
+            <a asp-area="Administrator" asp-controller="Category" asp-action="showAllCategory" role="button" class="btn green-jungle"> مدیریت دسته بندی ها </a>
 @*             <a href="#showmodal=@Url.Page("./Index", "Create")" role="button" class="btn btn-outline green-haze"> ثبت کتاب جدید <i class="fa fa-plus ml-2"></i></a> *@
             <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline"> بازگشت </a>
         </div>
@@ -82,37 +39,6 @@
             @if (ViewBag.id != 0)
             {
                 <input type="hidden" asp-for="SubCategory" value="@ViewBag.id" />
-            }
-            @if (TempData["Result"] != null)
-            {
-                if (TempData["Result"].ToString() == "true")
-                {
-                    <script>
-                        Swal.fire({
-                            title: 'موفق...',
-                            text: 'ثبت دسته بندی جدید انجام شد .',
-                            position: 'top-center',
-                            icon: 'success',
-                            iconColor: '#26C281',
-                            showConfirmButton: false,
-                            timer: 2550
-                        })
-                    </script>
-                }
-                else
-                {
-                    <script>
-                        Swal.fire({
-                            title: 'خطا...',
-                            text: 'لطفاً ورودی ها را تکمیل نمایید .',
-                            position: 'top-center',
-                            icon: 'error',
-                            iconColor: '#D91E18',
-                            showConfirmButton: false,
-                            timer: 1000
-                        })
-                    </script>
-                }
             }
             <div class="panel-body">
                 <div class="row">
@@ -191,10 +117,10 @@
                     cursor: 'wait',
                 }
             });
-            setTimeout($.unblockUI, 4500);
+            setTimeout($.unblockUI, 2500);
             setTimeout(() => {
                 document.location.reload();
-            }, 4500);
+            }, 2500);
         });
     </script>
     <script>
@@ -216,7 +142,7 @@
                     cursor: 'wait',
                 }
             });
-            setTimeout($.unblockUI, 2700);
+            setTimeout($.unblockUI, 1000);
             // setTimeout(function () {
             //     Swal.fire({
             //         title: 'خطا...',
@@ -225,12 +151,12 @@
             //         icon: 'error',
             //         iconColor: '#D91E18',
             //         showConfirmButton: false,
-            //         timer: 1000
+            //         timer: 3000
             //     })
-            // }, 1000)
-            // setTimeout(() => {
-            //     document.location.reload();
-            // }, 2500);
+            // }, 1500)
+            setTimeout(() => {
+                document.location.reload();
+            }, 1150);
         });
     </script>
     <!--==================================================================-->
