--- a/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
@@ -51,12 +51,12 @@
             </a>
             <ul class="sub-menu">
                 <li class="nav-item">
-                    <a href="/Administrator/Category/AddCategory" class="nav-link ">
+                    <a asp-area="Administrator" asp-controller="Category" asp-action="AddCategory" class="nav-link ">
                         <span class="title">ثبت دسته بندی</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link ">
+                    <a asp-area="Administrator" asp-controller="Category" asp-action="showAllCategory" class="nav-link ">
                         <span class="title">مدیریت دسته بندی ها</span>
                     </a>
                 </li>
