--- a/FarhangbookStore/Areas/Administrator/Views/Category/AddCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/AddCategory.cshtml
@@ -24,7 +24,7 @@
     <div class="portlet-title">
         <div class="caption">
             <i class=" icon-layers font-green"></i>
-            <span class="caption-subject font-green-sharp bold uppercase">ثبت دسته بندی جدید</span>
+            <span class="caption-subject font-green-sharp bold uppercase tooltips" data-container="body" data-placement="top" data-original-title="Tooltip in top">ثبت دسته بندی جدید</span>
         </div>
         <div class="actions">
             <a href="#" role="button" class="btn btn-outline red-thunderbird" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
@@ -34,6 +34,24 @@
         </div>
     </div>
     <div class="portlet-body">
+        <!--نمایش پیغام موفقیت آمیز بودن ثبت یا خطای درج اطلاعات در برنامه-->
+@*         @if (TempData["Result"] != null)
+        {
+            if (TempData["Result"].ToString() == "true")
+            {
+                <div class="alert alert-success bg-green-jungle bg-font-green-jungle alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                    ثبت اطلاعات با موفقیت انجام شد .
+                </div>
+            }
+            else
+            {
+                <div class="alert alert-danger bg-red-thunderbird bg-font-red-thunderbird alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                    خطادر انجام عملیات .
+                </div>
+            }
+        } *@
         <!-- PERSONAL INFO TAB -->
         <form asp-area="Administrator" asp-controller="Category" asp-action="AddCategory" enctype="multipart/form-data">
             @if (ViewBag.id != 0)
@@ -49,7 +67,7 @@
                                 <i class="icon-layers"></i>
                                 <input asp-for="CategoryFaTitle" class="form-control input-icon right" autofocus="autofocus" placeholder="عنوان دسته بندی را به فارسی وارد نمایید." />
                             </div>
-                            <span asp-validation-for="CategoryFaTitle" class="text-danger"></span>
+                            <span asp-validation-for="CategoryFaTitle" id="inputError" class="bg-red-thunderbird bg-font-red-thunderbird"></span>
                         </div>
                     </div>
                     <div class="col-md-5 col-xl-12 col-sm-12">
@@ -59,11 +77,11 @@
                                 <i class="icon-layers"></i>
                                 <input asp-for="CategoryEnTitle" class="form-control input-icon right EN__Font" placeholder="Enter the title of the category in English." />
                             </div>
-                            <span asp-validation-for="CategoryEnTitle" id="inputError" class="help-block text-danger"></span>
                         </div>
+                            <span asp-validation-for="CategoryEnTitle" id="inputError" class="bg-red-thunderbird bg-font-red-thunderbird"></span>
                     </div>
                     <div class="col-md-2 col-xl-12 col-sm-12">
-                        <button type="submit" id="AddData" value="ثبت اطلاعات" class="btn-group-justified btn btn-primary" data-style="zoom-in"> ثبت و ذخیره <i class="fa fa-save ml-2"></i></button>
+                        <button type="submit" value="ثبت اطلاعات" class="btn-group-justified btn btn-primary" data-style="zoom-in"> ثبت و ذخیره <i class="fa fa-save ml-2"></i></button>
                     </div>
                 </div>
             </div>
