changelog_02-10-06 : Complete admin config entities PATCH0.5

--- a/FarhangbookStore/Areas/Administrator/Views/Category/AddCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/AddCategory.cshtml
@@ -54,6 +54,7 @@
         } *@
         <!-- PERSONAL INFO TAB -->
         <form asp-area="Administrator" asp-controller="Category" asp-action="AddCategory" enctype="multipart/form-data">
+            <!-- دسته بندی اصلی جهت اضافه کردن زیردسته ID بازگشت مقدار  -->
             @if (ViewBag.id != 0)
             {
                 <input type="hidden" asp-for="SubCategory" value="@ViewBag.id" />
