changelog_02-10-06 : Complete admin config entities PATCH0.7

--- a/FarhangbookStore/Areas/Administrator/Views/Category/ShowAllSubCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/ShowAllSubCategory.cshtml
@@ -16,40 +16,40 @@
     <div class="portlet-title">
         <div class="caption">
             <i class=" icon-layers font-green"></i>
-            <span class="caption-subject font-green-sharp bold uppercase">مدیریت زیردسته های منوی <span class="bg-green-jungle bg-font-green-jungle badge"></span></span>
+            <span class="caption-subject font-green-sharp bold uppercase">مدیریت زیردسته های دوم <span class="bg-green-jungle bg-font-green-jungle badge"></span></span>
         </div>
         <div class="actions">
-            <a href="#" role="button" class="btn btn-outline red-thunderbird" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
-            <a href="/Administrator/Category/AddCategory/@ViewBag.id" role="button" class="btn green-jungle"> ثبت زیردسته <i class="fa fa-plus ml-2"></i></a>
+            <a href="#" role="button" class="btn btn-outline red-thunderbird popovers" data-trigger="hover" data-placement="top" data-content="تازه سازی اطلاعات در مواقع ضروری" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
+            <a href="/Administrator/Category/AddCategory/@ViewBag.id" role="button" class="btn green-jungle"> ثبت زیردسته دوم <span></span><i class="fa fa-plus ml-2"></i></a>
             @*             <a href="#showmodal=@Url.Page("./Index", "Create")" role="button" class="btn btn-outline green-haze"> ثبت کتاب جدید <i class="fa fa-plus ml-2"></i></a> *@
-            <a asp-area="Administrator" asp-controller="Category" asp-action="showAllCategory" role="button" class="btn dark btn-outline"> بازگشت به منوها </a>
+            <a asp-area="Administrator" asp-controller="Category" asp-action="showAllCategory" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به جدول منو های ثبت شده در سایت"> بازگشت </a>
         </div>
     </div>
     <div class="portlet-body">
         <table id="Datatable_infoTable" class="table table-bordered table-striped table-condensed flip-content table-hover table-header-fixed">
             <thead>
                 <tr class="font-white">
-                    <th>ردیف</th>
-                    <th>نام زیردسته به فارسی</th>
-                    <th>نام زیردسته به انگلیسی</th>
-                    <th>نام دسته بندی اصلی</th>
-                    <th>عملیات</th>
+                    <th class="text-center">ردیف</th>
+                    <th class="text-center">نام زیردسته به فارسی</th>
+                    <th class="text-center">نام زیردسته به انگلیسی</th>
+                    <th class="text-center">نام زیردسته منو</th>
+                    <th class="text-center">عملیات</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td>@item.Categoryid</td>
+                        <td class="text-center">@item.Categoryid</td>
                         <td>@item.CategoryFaTitle</td>
-                        <td class="EN__Font">@item.CategoryEnTitle</td>
-                        <td><a href="/Administrator/Category/ShowAllSubCategorythree/@item.Categoryid" class="btn btn-outline green-jungle"><span class="font-blue-ebonyclay bold">@item.CategoryFaTitle</span></a></td>
-                        <td>
-                            <a class="btn green-haze btn-circle btn-icon-only btn-default">
+                        <td class="EN__Font text-right">@item.CategoryEnTitle</td>
+                        <td><a href="/Administrator/Category/ShowAllSubCategorythree/@item.Categoryid" class="btn btn-outline green-jungle popovers" data-trigger="hover" data-placement="top" data-content=" جهت نمایش زیرمنو های سطح سوم، کلیک نمایید"> ورود به زیردسته نهایی : <span class="font-blue-ebonyclay bold">@item.CategoryFaTitle</span></a></td>
+                        <td class="text-center">
+                            <a class="btn green-haze btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="ویرایش اطلاعات">
                                 <i class="fa fa-pencil"></i>
                             </a>
-                            <a class="btn red-thunderbird btn-circle btn-icon-only btn-default" data-toggle="modal" data-target="#modal-action-news">
-                                <i class="fa fa-trash-o"></i>
+                            <a class="btn red-thunderbird btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="غیرفعال سازی">
+                                <i class="fa fa-ban"></i>
                             </a>
                         </td>
                     </tr>
