--- a/FarhangbookStore/Areas/Administrator/Views/Category/AddCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/AddCategory.cshtml
@@ -30,7 +30,7 @@
             <a href="#" role="button" class="btn btn-outline red-thunderbird" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
             <a asp-area="Administrator" asp-controller="Category" asp-action="showAllCategory" role="button" class="btn green-jungle"> مدیریت دسته بندی ها </a>
 @*             <a href="#showmodal=@Url.Page("./Index", "Create")" role="button" class="btn btn-outline green-haze"> ثبت کتاب جدید <i class="fa fa-plus ml-2"></i></a> *@
-            <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline"> بازگشت </a>
+            <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت </a>
         </div>
     </div>
     <div class="portlet-body">
