changelog_02-10-09 : Complete admin config entities PATCH0.8

--- a/FarhangbookStore/Areas/Administrator/Views/Category/ShowAllSubCategorythree.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/ShowAllSubCategorythree.cshtml
@@ -30,7 +30,7 @@
                 <tr class="font-white">
                     <th class="text-center">ردیف</th>
                     <th class="text-center">نام زیردسته به فارسی</th>
-                    <th class="text-center">نام زیردسته به انگلیسی</th>
+                    <th class="text-center EN__Font">Last Subcategory name in English</th>
                     <th class="text-center">عملیات</th>
                 </tr>
             </thead>
@@ -40,8 +40,8 @@
                     <tr>
                         <td class="text-center">@item.Categoryid</td>
                         <td class="text-center">@item.CategoryFaTitle</td>
-                        <td class="EN__Font text-right">@item.CategoryEnTitle</td>
-                        <td class="text-center">
+                        <td class="text-center EN__Font">@item.CategoryEnTitle</td>
+ظ                        <td class="text-center">
                             <a class="btn green-haze btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="ویرایش اطلاعات">
                                 <i class="fa fa-pencil"></i>
                             </a>
