--- a/FarhangbookStore/Areas/Administrator/Views/Category/AddCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/AddCategory.cshtml
@@ -39,10 +39,19 @@
         {
             if (TempData["Result"].ToString() == "true")
             {
-                <div class="alert alert-success bg-green-jungle bg-font-green-jungle alert-dismissable">
-                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                    ثبت اطلاعات با موفقیت انجام شد .
-                </div>
+                <script>
+
+                    setTimeout(function () {
+                        Swal.fire({
+                            position: 'top-end',
+                            icon: 'error',
+                            title: 'اسلایدری با این مشخصات یافت نشد .',
+                            showConfirmButton: false,
+                            timer: 3000
+                        })
+                    }, 50)
+
+                </script>
             }
             else
             {
@@ -82,7 +91,7 @@
                             <span asp-validation-for="CategoryEnTitle" id="inputError" class="bg-red-thunderbird bg-font-red-thunderbird"></span>
                     </div>
                     <div class="col-md-2 col-xl-12 col-sm-12">
-                        <button type="submit" value="ثبت اطلاعات" class="btn-group-justified btn btn-primary" data-style="zoom-in"> ثبت و ذخیره <i class="fa fa-save ml-2"></i></button>
+                        <button type="submit" data-loading-text="در حال بررسی ..." value="ثبت اطلاعات" class="btn-block btn btn-primary mt-ladda-btn ladda-button mt-progress-demo" data-style="slide-left"> ثبت و ذخیره <i class="fa fa-save ml-2"></i></button>
                     </div>
                 </div>
             </div>
@@ -94,7 +103,9 @@
 @section MainScripts{
     <script src="~/lib/persiandatepicker/calendar.js" asp-append-version="true"></script>
     <script src="~/lib/persiandatepicker/jquery.Bootstrap-PersianDateTimePicker.js" asp-append-version="true"></script>
-    <script src="~/lib/swalalert/sweetalert.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
+    <script src="~/lib/SwalAlert/sweetAlert.js" asp-append-version="true"></script>
     <!--===================================================================-->
     <!--اسکریپت جستجوی اطلاعات-->
     <script>
