--- a/FarhangbookStore/Areas/Administrator/Views/Category/showAllCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/showAllCategory.cshtml
@@ -21,17 +21,54 @@
         <div class="actions">
             <a href="#" role="button" class="btn btn-outline red-thunderbird popovers" data-trigger="hover" data-placement="top" data-content="تازه سازی اطلاعات در مواقع ضروری" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
             <a asp-area="Administrator" asp-controller="Category" asp-action="AddCategory" role="button" class="btn green-jungle"> ثبت دسته بندی جدید <i class="fa fa-plus ml-2"></i></a>
+            @* <a href="#showmodal=/Administrator/Category/AddCategory" role="button" class="btn green-jungle"> ثبت دسته بندی جدید <i class="fa fa-plus ml-2"></i></a> *@
             @*             <a href="#showmodal=@Url.Page("./Index", "Create")" role="button" class="btn btn-outline green-haze"> ثبت کتاب جدید <i class="fa fa-plus ml-2"></i></a> *@
             <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت </a>
         </div>
     </div>
     <div class="portlet-body">
+        <!--نمایش پیغام موفقیت آمیز بودن ثبت یا خطای درج اطلاعات در برنامه-->
+        @if (TempData["Result"] != null)
+        {
+            if (TempData["Result"].ToString() == "true")
+            {
+                <script>
+                    setTimeout(function () {
+                        Swal.fire({
+                            position: 'center',
+                            icon: 'success',
+                            title: 'دسته بندی ثبت شد.',
+                            showConfirmButton: false,
+                            timer: 1800
+                        })
+
+                    }, 50)
+                </script>
+            }
+            else
+            {
+                <script>
+                    setTimeout(function () {
+                        Swal.fire({
+                            position: 'center',
+                            icon: 'error',
+                            title: 'عملیات با خطا مواجه شد .',
+                            showConfirmButton: false,
+                            timer: 1800
+                        })
+
+                    }, 50)
+@*                     setTimeout(function () { window.location.reload() }, 1890)
+                    break; *@
+                </script>
+            }
+        }
         <table id="Datatable_infoTable" class="table table-bordered table-striped table-condensed flip-content table-hover table-header-fixed">
             <thead>
                 <tr class="font-white">
                     <th class="text-center">ردیف</th>
                     <th class="text-center">نام دسته بندی به فارسی</th>
-                    <th class="text-center">نام دسته بندی به انگلیسی</th>
+                    <th class="text-center EN__Font">Category name in English</th>
                     <th class="text-center">مدیریت زیردسته ها</th>
                     <th class="text-center">عملیات</th>
                 </tr>
@@ -41,14 +78,14 @@
                 {
                     <tr>
                         <td class="text-center">@item.Categoryid</td>
-                        <td>@item.CategoryFaTitle</td>
-                        <td class="EN__Font text-right">@item.CategoryEnTitle</td>
-                        <td><a href="/Administrator/Category/ShowAllSubCategory/@item.Categoryid" class="btn btn-outline green-jungle">ورود به زیردسته : <span class="font-blue-ebonyclay bold">@item.CategoryFaTitle</span></a></td>
+                        <td class="text-center">@item.CategoryFaTitle</td>
+                        <td class="text-center EN__Font">@item.CategoryEnTitle</td>
+                        <td><a href="/Administrator/Category/ShowAllSubCategory/@item.Categoryid" class="btn btn-outline green-jungle btn-block">ورود به زیردسته : <span class="font-blue-ebonyclay bold">@item.CategoryFaTitle</span></a></td>
                         <td class="text-center">
-                            <a href="/Administrator/Category/ShowAllCategory/@item.Categoryid" class="btn green-haze btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="ویرایش اطلاعات">
+                            <a href="#showmodal=/Administrator/Category/UpdateCategory/@item.Categoryid" class="btn green-haze btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="ویرایش اطلاعات">
                                 <i class="fa fa-pencil"></i>
                             </a>
-                            <a class="btn red-thunderbird btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="غیرفعال سازی">
+                            <a href="#showmodal=/Administrator/Category/DeleteCategory/@item.Categoryid" class="btn red-thunderbird btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="غیرفعال سازی">
                                 <i class="fa fa-ban"></i>
                             </a>
                         </td>
@@ -57,11 +94,16 @@
             </tbody>
         </table>
     </div>
+    <partial name="_AdminMainModal" />
 </div>
 <!-- END CONTAINER -->
 @section MainScripts{
-    <script src="~/lib/persiandatepicker/calendar.js"></script>
-    <script src="~/lib/persiandatepicker/jquery.Bootstrap-PersianDateTimePicker.js"></script>
+    <script src="~/lib/persiandatepicker/calendar.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
+    <script src="~/lib/persiandatepicker/jquery.Bootstrap-PersianDateTimePicker.js" asp-append-version="true"></script>
+    <script src="~/lib/OpenModal.js" asp-append-version="true"></script>
+    <script src="~/lib/SwalAlert/sweetAlert.js" asp-append-version="true"></script>
     <!--===================================================================-->
     <!--اسکریپت جستجوی اطلاعات-->
     <script>
