--- a/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
@@ -9,65 +9,48 @@
             </a>
         </li>
         <li class="heading">
-            <h3 class="uppercase">ثبت محصولات</h3>
+            <h3 class="uppercase">ثبت و مدیریت اطلاعات</h3>
         </li>
         <li class="nav-item  ">
             <a href="javascript:;" class="nav-link nav-toggle">
                 <i class="icon-folder-alt"></i>
-                <span class="title">مدیریت محصولات</span>
+                <span class="title">مدیریت کالاها و اطلاعات</span>
                 <span class="arrow"></span>
             </a>
             <ul class="sub-menu">
                 <li class="nav-item">
                     <a href="#" class="nav-link ">
-                        <span class="title">ثبت کتاب</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link ">
-                        <span class="title">مدیریت کتاب ها</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link ">
-                        <span class="title">مدیریت ویژه گی ها</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link ">
-                        <span class="title">مدیریت انتشارات</span>
-                    </a>
-                </li>
-            </ul>
-        </li>
-        <li class="heading">
-            <h3 class="uppercase">گروه بندی اطلاعات</h3>
-        </li>
-        <li class="nav-item  ">
-            <a href="javascript:;" class="nav-link nav-toggle">
-                <i class="icon-layers"></i>
-                <span class="title">دسته بندی ها</span>
-                <span class="arrow"></span>
-            </a>
-            <ul class="sub-menu">
-                <li class="nav-item">
-                    <a asp-area="Administrator" asp-controller="Category" asp-action="AddCategory" class="nav-link ">
-                        <span class="title">ثبت دسته بندی</span>
+                        <span class="title">کتاب ها</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a asp-area="Administrator" asp-controller="Category" asp-action="showAllCategory" class="nav-link ">
-                        <span class="title">مدیریت دسته بندی ها</span>
+                        <span class="title">دسته بندی ها</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link ">
-                        <span class="title">گروه بندی محصولات</span>
+                        <span class="title">اسلایدرها</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link ">
-                        <span class="title">گروه بندی کالاها</span>
+                        <span class="title">ویژه گی ها</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link ">
+                        <span class="title">انتشارات</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link ">
+                        <span class="title">ناشران</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link ">
+                        <span class="title">برچسب ها و کلمات کلیدی</span>
                     </a>
                 </li>
             </ul>
